--- a/RegistroTecnicos/Components/Pages/Registro_c/Delete.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_c/Delete.razor
@@ -31,7 +31,7 @@
                                         <div class="row">
                                             <div class="col-md-8">
                                                 <ul class="list-unstyled">
-                                                    <li><strong>clienteId:</strong> @Cliente.ClienteId</li>
+                                                    <li><strong>ID de cliente:</strong> @Cliente.ClienteId</li>
                                                     <li><strong>Nombres:</strong> @Cliente.Nombres</li>
                                                     <li><strong>WhatsApp:</strong> @Cliente.Whatsapp</li>
                                                 </ul>
