--- a/RegistroTecnicos/Components/Pages/Registro_c/Detail.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_c/Detail.razor
@@ -20,7 +20,7 @@
 
                         <div class="card-body">
                             <ul class="list-unstyled">
-                                <li><strong>clienteId:</strong> @Cliente.ClienteId</li>
+                                <li><strong>ID de cliente:</strong> @Cliente.ClienteId</li>
                                 <li><strong>Nombre:</strong> @Cliente.Nombres</li>
                                 <li><strong>WhatsApp:</strong> @Cliente.Whatsapp</li>
                             </ul>
