--- a/RegistroTecnicos/Components/Pages/Registro_p/Detail.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_p/Detail.razor
@@ -20,9 +20,9 @@
 
                         <div class="card-body">
                             <ul class="list-unstyled">
-                                <li><strong>prioridadId:</strong> @Prioridad.PrioridadId</li>
+                                <li><strong>ID de prioridad:</strong> @Prioridad.PrioridadId</li>
                                 <li><strong>Descripcion:</strong> @Prioridad.Descripcion</li>
-                                <li><strong>Tiempo:</strong> @Prioridad.Tiempo</li>
+                                <li><strong>Tiempo (Minutos):</strong> @Prioridad.Tiempo</li>
                             </ul>
                         </div>
 
