--- a/RegistroTecnicos/Components/Pages/Registro_p/Edit.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_p/Edit.razor
@@ -16,7 +16,7 @@
             <div class="row">
 
                 <div class="col-md-6 mb-3">
-                    <label for="PrioridadId" class="form-label">PrioridadId:</label>
+                    <label for="PrioridadId" class="form-label">ID de prioridad:</label>
                     <div class="input-group">
                         <div style="width: 40%; height: 1em;">
                             <InputNumber @bind-Value="Prioridad.PrioridadId" class="form-control" style="font-size: 0.8em;" aria-describedby="BotonBuscar" />
@@ -32,7 +32,7 @@
             </div>
 
             <div class="mb-3">
-                <label for="Tiempo" class="form-label">Tiempo:</label>
+                <label for="Tiempo" class="form-label">Tiempo (en minutos):</label>
                 <InputNumber @bind-Value="Prioridad.Tiempo" class="form-control" />
                 <ValidationMessage For="@(() => Prioridad.Tiempo)" />
             </div>
