--- a/RegistroTecnicos/Components/Pages/Registro_t/Delete.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_t/Delete.razor
@@ -31,12 +31,12 @@
                                         <div class="row">
                                             <div class="col-md-8">
                                                 <ul class="list-unstyled">
-                                                    <li><strong>trabajoId:</strong> @Trabajo.TrabajoId</li>
+                                                    <li><strong>Id de trabajo:</strong> @Trabajo.TrabajoId</li>
                                                     <li><strong>Fecha:</strong> @Trabajo.Fecha</li>
                                                     <li><strong>Descripcion:</strong> @Trabajo.Descripcion</li>                                                    
                                                     <li><strong>Monto:</strong> @Trabajo.Monto</li>
-                                                    <li><strong>ClienteId:</strong> @Trabajo.ClienteId</li>
-                                                    <li><strong>TecnicoId:</strong> @Trabajo.TecnicoId</li>
+                                                    <li><strong>Id de cliente:</strong> @Trabajo.ClienteId</li>
+                                                    <li><strong>Id de tecnico:</strong> @Trabajo.TecnicoId</li>
                                                 </ul>
                                             </div>
                                         </div>
