--- a/RegistroTecnicos/Components/Layout/NavMenu.razor
+++ b/RegistroTecnicos/Components/Layout/NavMenu.razor
@@ -16,24 +16,24 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Index">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Tecnicos
+                <span class="bi bi-wrench fs-5 h-auto" aria-hidden="true"></span> Tecnicos
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/Clientes/Index">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Clientes
+                <span class="bi bi-person-circle fs-5 h-auto" aria-hidden="true"></span> Clientes
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/Trabajos/Index">
-                <span class="bi bi-clipboard" aria-hidden="true"></span> Trabajos
+                <span class="bi bi-list-check fs-5 h-auto" aria-hidden="true"></span> Trabajos
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/Prioridades/Index">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Prioridades
+                <span class="bi bi-journal-arrow-up fs-5 h-auto" aria-hidden="true"></span> Prioridades
             </NavLink>
         </div>
     </nav>
