--- a/RegistroTecnicos/Components/Pages/Registro/Delete.razor
+++ b/RegistroTecnicos/Components/Pages/Registro/Delete.razor
@@ -16,7 +16,7 @@
                 <h3><strong>Eliminar Tecnico</strong></h3>
             </div>
             <div class="card-header">
-                <h3 class="text-danger">¿Estás seguro de que quieres eliminar ese tecnico?</h3>
+                <h3 class="text-danger">¿Estás seguro de que quieres eliminar ese técnico?</h3>
             </div>    
             
             <div class="container">
@@ -24,7 +24,7 @@
                     <div class="col-md-6">
                         <div class="card shadow-lg">
                             <div class="card-header">
-                                <h3 class="text-center"><strong>Datos del tecnico</strong></h3>
+                                <h3 class="text-center"><strong>Datos del técnico</strong></h3>
                             </div>
                             <div class="card-body">
                                 <div class="border-primary border-2 borde">
@@ -32,10 +32,10 @@
                                         <div class="row">
                                             <div class="col-md-8">
                                                 <ul class="list-unstyled">
-                                                    <li><strong>TecnicoId:</strong> @tecnico.TecnicoId</li>
+                                                    <li><strong>ID de Técnico:</strong> @tecnico.TecnicoId</li>
                                                     <li><strong>Nombres:</strong> @tecnico.Nombres</li>
                                                     <li><strong>Tipo de Técnico:</strong> @GetTipoTecnicoDescripcion(tecnico.TipoTecnicosId)</li>
-                                                    <li><strong>SueldoHora:</strong> @tecnico.SueldoHora</li>
+                                                    <li><strong>Sueldo/Hora:</strong> @tecnico.SueldoHora</li>
                                                 </ul>
                                             </div>
                                         </div>
