--- a/RegistroTecnicos/Components/Pages/Registro/Edit.razor
+++ b/RegistroTecnicos/Components/Pages/Registro/Edit.razor
@@ -9,7 +9,7 @@
     <DataAnnotationsValidator />
     <div class="card shadow-lg border-0 rounded" style="background-color: #f0f0fa;">
         <div class="card-header bg-primary text-white" style="text-align: center;">
-            <h3> <i class="fas fa-clipboard-list"></i> Editar Tecnico</h3>
+            <h3> <i class="fas fa-clipboard-list"></i> Editar Técnico</h3>
         </div>
 
         <div class="card-body">
@@ -17,7 +17,7 @@
             <div class="row">
 
                 <div class="col-md-6 mb-3">
-                    <label for="TecnicoId" class="form-label">TecnicoId:</label>
+                    <label for="TecnicoId" class="form-label">ID de Técnico:</label>
                     <div class="input-group">
                         <div style="width: 40%; height: 1em;">
                             <InputNumber @bind-Value="tecnico.TecnicoId" class="form-control" style="font-size: 0.8em;" aria-describedby="BotonBuscar" />
@@ -45,7 +45,7 @@
             </div>
 
             <div class="mb-3">
-                <label for="SueldoHora" class="form-label">Sueldo Hora:</label>
+                <label for="SueldoHora" class="form-label">Sueldo/Hora:</label>
                 <InputNumber @bind-Value="tecnico.SueldoHora" class="form-control" />
                 <ValidationMessage For="@(() => tecnico.SueldoHora)" />
             </div>
