--- a/RegistroTecnicos/Components/Pages/Registro_p/Create.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_p/Create.razor
@@ -16,7 +16,7 @@
             @* PrioridadId *@
             <div class="row">
                 <div class="col-md-6 mb-3">
-                    <label for="PrioridadId" class="form-label">PrioridadId:</label>
+                    <label for="PrioridadId" class="form-label">ID de prioridad:</label>
                     <div class="input-group">
                         <div class="sizeid">
                             <InputNumber @bind-Value="Prioridad.PrioridadId" class="form-control" style="font-size: 0.8em;" aria-describedby="BotonBuscar" />
@@ -32,10 +32,10 @@
                 <ValidationMessage For="@(() => Prioridad.Descripcion)" />
             </div>
 
-            @* Fecha *@
+            @* Tiempo en minutos *@
             <div class="mb-3">
-                <label for="Tiempo" class="form-label">Tiempo:</label>
-                <InputDate @bind-Value="Prioridad.Tiempo" class="form-control" />
+                <label for="Tiempo" class="form-label">Tiempo (en minutos):</label>
+                <InputNumber @bind-Value="Prioridad.Tiempo" class="form-control" />
                 <ValidationMessage For="@(() => Prioridad.Tiempo)" />
             </div>
 
