--- a/RegistroTecnicos/Components/Pages/Registro_p/Delete.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_p/Delete.razor
@@ -31,7 +31,7 @@
                                         <div class="row">
                                             <div class="col-md-8">
                                                 <ul class="list-unstyled">
-                                                    <li><strong>prioridadId:</strong> @Prioridad.PrioridadId</li>
+                                                    <li><strong>ID de prioridad:</strong> @Prioridad.PrioridadId</li>
                                                     <li><strong>Descripcion:</strong> @Prioridad.Descripcion</li>
                                                     <li><strong>Tiempo:</strong> @Prioridad.Tiempo</li>
                                                 </ul>
