--- a/RegistroTecnicos/Components/Pages/Registro_p/MainScreen.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_p/MainScreen.razor
@@ -35,9 +35,9 @@
     <table class="table table-bordered text-center">
         <thead class="bg-primary text-white">
             <tr>
-                <th>prioridadId</th>
+                <th>ID de prioridad</th>
                 <th>Descripcion</th>
-                <th>Tiempo</th>
+                <th>Tiempo (Minutos)</th>
                 <th>Ver</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
@@ -52,19 +52,19 @@
                     <td>@prioridad.Tiempo</td>
                     <td>
                         <a class="btn btn-outline-primary" href="/Prioridades/Detail/@prioridad.PrioridadId">
-                            <span class="bi bi-info-circle-fill"></span>
+                            <span class="bi bi-card-heading fs-5"></span>
                         </a>
                     </td>
 
                     <td>
-                        <a class="btn btn-outline-success" href="/Prioridades/Edit/@prioridad.Descripcion">
-                            <span class="bi bi-marker-tip"></span>
+                        <a class="btn btn-outline-success" href="/Prioridades/Edit/@prioridad.PrioridadId">
+                            <span class="bi bi-pencil fs-5"></span>
                         </a>
                     </td>
 
                     <td>
-                        <a class="btn btn-outline-warning" href="/Prioridades/Delete/@prioridad.Tiempo">
-                            <span class="bi bi-dash-circle-fill"></span>
+                        <a class="btn btn-rojo" href="/Prioridades/Delete/@prioridad.PrioridadId">
+                            <span class="bi bi-trash fs-5"></span>
                         </a>
                     </td>
                 </tr>
@@ -101,7 +101,7 @@
             {
                 ListaPrioridades = await prioridadesServices.Listar(p => p.PrioridadId == prioridadId);
             }
-            else if (filtro == "Nombres")
+            else if (filtro == "Descripcion")
             {
                 ListaPrioridades = await prioridadesServices.Listar(p => p.Descripcion == valorFiltro);
             }
