--- a/RegistroTecnicos/Components/Pages/Registro_t/Edit.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_t/Edit.razor
@@ -2,6 +2,7 @@
 @inject ClientesServices clientesServices
 @inject TecnicoServices tecnicosServices
 @inject TrabajosServices trabajosServices
+@inject PrioridadesServices prioridadesServices
 @rendermode InteractiveServer
 
 <EditForm Model="Trabajo" OnValidSubmit="Guardar">
@@ -15,7 +16,7 @@
             @* TrabajoId *@
             <div class="row">
                 <div class="col-md-6 mb-3">
-                    <label for="TrabajoId" class="form-label">TrabajoId:</label>
+                    <label for="TrabajoId" class="form-label">ID de trabajo:</label>
                     <div class="input-group">
                         <div class=" sizeid">
                             <InputNumber @bind-Value="Trabajo.TrabajoId" class="form-control" style="font-size: 0.8em;" aria-describedby="BotonBuscar" />
@@ -56,6 +57,19 @@
                 </InputSelect>
                 <ValidationMessage For="@(() => Trabajo.TecnicoId)" />
             </div>
+            @* Prioridad *@
+            <div class="mb-3">
+                <label for="PrioridadId" class="form-label">Prioridad:</label>
+                <InputSelect @bind-Value="Trabajo.PrioridadId" class="form-select">
+                    <option value="" disabled>Seleccione un tipo</option>
+                    @foreach (var tipo in Lista_Prioridades)
+                    {
+                        <option value="@tipo.PrioridadId">@tipo.Descripcion</option>
+                    }
+                </InputSelect>
+                <ValidationMessage For="@(() => Trabajo.PrioridadId)" />
+            </div>
+
 
             @* Descripcion *@
             <div class="mb-3">
@@ -77,7 +91,7 @@
             <div class="btn-group">
                 <button type="button" class="btn btn-outline-primary ml-2" @onclick="Nuevo"><span class="bi bi-plus"></span> Nuevo </button>
                 <button type="submit" class="btn btn-outline-success ml-2"><span class="bi bi-check-circle-fill"></span> Guardar </button>
-                <a type="button" href="/Tecnico/Index/" class="btn btn-outline-danger"><span class="bi bi-arrow-bar-left"></span> Retroceder </a>
+                <a type="button" href="/Trabajos/Index/" class="btn btn-outline-danger"><span class="bi bi-arrow-bar-left"></span> Retroceder </a>
             </div>
         </div>
     </div>
@@ -90,10 +104,11 @@
     private bool Existe = false;
     public List<Clientes> Lista_Clientes { get; set; } = new List<Clientes>();
     public List<Tecnicos> Lista_Tecnicos { get; set; } = new List<Tecnicos>();
+    public List<Prioridades> Lista_Prioridades { get; set; } = new List<Prioridades>();
 
     protected override async Task OnInitializedAsync()
     {
-
+        Lista_Prioridades = await prioridadesServices.GetPrioridades();
         Lista_Clientes = await clientesServices.GetClientes();
         Lista_Tecnicos = await tecnicosServices.GetTecnicos();
 
