--- a/RegistroTecnicos/Components/Pages/Registro_t/MainScreen.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_t/MainScreen.razor
@@ -38,12 +38,13 @@
     <table class="table table-bordered text-center">
         <thead class="bg-primary text-white">
             <tr>
-                <th>trabajoId</th>
+                <th>Id de trabajo</th>
                 <th>Fecha</th>
                 <th>Descripcion</th>                
                 <th>Monto</th>
                 <th>ClienteId</th>
-                <th>TecnicoId</th>
+                <th>ID de Tecnico</th>
+                <th>ID de la Prioridad</th>
                 <th>Ver</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
@@ -54,27 +55,28 @@
             {
                 <tr>
                     <td>@trabajo.TrabajoId</td>
-                    <td>@trabajo.Fecha</td>
+                    <td>@Trabajo.Fecha.ToString("dd/MM/yyyy")</td>
                     <td>@trabajo.Descripcion</td>                   
                     <td>@trabajo.Monto</td>
                     <td>@trabajo.ClienteId</td>
                     <td>@trabajo.TecnicoId</td>
+                    <td>@trabajo.PrioridadId</td>
 
                     <td>
                         <a class="btn btn-outline-primary" href="/Trabajos/Detail/@trabajo.TrabajoId">
-                            <span class="bi bi-info-circle-fill"></span>
+                            <span class="bi bi-card-heading fs-5"></span>
                         </a>
                     </td>
 
                     <td>
                         <a class="btn btn-outline-success" href="/Trabajos/Edit/@trabajo.TrabajoId">
-                            <span class="bi bi-marker-tip"></span>
+                            <span class="bi bi-pencil fs-5"></span>
                         </a>
                     </td>
 
                     <td>
-                        <a class="btn btn-outline-warning" href="/Trabajos/Delete/@trabajo.TrabajoId">
-                            <span class="bi bi-dash-circle-fill"></span>
+                        <a class="btn btn-rojo" href="/Trabajos/Delete/@trabajo.TrabajoId">
+                            <span class="bi bi-trash fs-5"></span>
                         </a>
                     </td>
                 </tr>
