--- a/RegistroTecnicos/Components/Pages/Registro_t/Delete.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_t/Delete.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Trabajos/Delete"
 @page "/Trabajos/Delete/{trabajoId:int}"
-@inject TrabajosServices trabajosServices
+@inject TrabajoServices trabajosServices
 @inject NavigationManager navigationManager
 @rendermode InteractiveServer
 @inject NotificationService notificationService
