--- a/RegistroTecnicos/Components/Pages/Registro_t/Detail.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_t/Detail.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Trabajos/Detail"
 @page "/Trabajos/Detail/{trabajoId:int}"
-@inject TrabajosServices trabajosServices
+@inject TrabajoServices trabajosServices
 @inject NavigationManager navigationManager
 @inject ClientesServices clientesServices
 @rendermode InteractiveServer
