--- a/RegistroTecnicos/Components/Pages/Registro_t/MainScreen.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_t/MainScreen.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Trabajos/Index"
 @rendermode InteractiveServer
-@inject TrabajosServices trabajosServices
+@inject TrabajoServices trabajosServices
 
 <EditForm Model="ListaTrabajos" class="border shadow-lg p-3 rounded">
 
