--- a/RegistroTecnicos/Components/Pages/Registro_t/Edit.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_t/Edit.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Trabajos/Edit/{TrabajoId:int}"
 @inject ClientesServices clientesServices
 @inject TecnicoServices tecnicosServices
-@inject TrabajosServices trabajosServices
+@inject TrabajoServices trabajosServices
 @inject PrioridadesServices prioridadesServices
 @rendermode InteractiveServer
 
@@ -85,6 +85,70 @@
                 <ValidationMessage For="@(() => Trabajo.Monto)" />
             </div>
 
+            <fieldset class="border-success border border-1">
+                <h3>Articulos</h3>
+                <div>
+                    <div class="row">
+                        <div class="col-3">
+                            <label>Producto</label>
+                            <div class="input-group mb-3">
+                                <InputSelect class="form-select" @bind-Value="articuloSeleccionado">
+                                    <option value="0" disabled selected>Seleccione un articulo</option>
+                                    @foreach (var articulo in Lista_Articulos)
+                                    {
+                                        <option value="@articulo.ArticuloId">@articulo.Descripcion</option>
+                                    }
+                                </InputSelect>
+                            </div>
+                        </div>
+
+                        <div class="col-3">
+                            <label>Cantidad</label>
+                            <div class="input-group mb-3">
+                                <InputNumber @bind-Value="trabajosDetalle.Cantidad" class="form-control"></InputNumber>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <label>Precio</label>
+                            <div class="input-group mb-3">
+                                <InputNumber @bind-Value="trabajosDetalle.Precio" class="form-control"></InputNumber>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <button type="button" @onclick="AgregarDetalle" class="btn btn-outline-primary"><i class="bi bi-plus">Agregar</i></button>
+                        </div>
+
+
+                    </div>
+
+                    <br>
+                    <table class="table table-bordered table-light m-1">
+                        <thead class="thead">
+                            <tr class="table">
+                                <th>Articulo Id</th>
+                                <th>Cantidad</th>
+                                <th>Precio</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            @foreach (var trabajoDetalles in Lista_TrabajosDetalle)
+                            {
+                                <tr>
+                                    <td>@trabajoDetalles.ArticuloId</td>
+                                    <td>@trabajoDetalles.Cantidad</td>
+                                    <td>@trabajoDetalles.Precio</td>
+                                    <td><button @onclick="@(() => RemoverDetalle(trabajoDetalles))" class="btn btn-outline-danger" type="button"><i class="oi oi-trash">Eliminar</i></button></td>
+                                </tr>
+                            }
+                        </tbody>
+
+                    </table>
+
+                </div>
+            </fieldset>
+
         </div>
 
         <div class="card-footer bg-light d-flex justify-content-center mt-3">
@@ -99,25 +163,28 @@
 
 @code {
     [Parameter]
-    public int? TrabajoId { get; set; }
+    public int TrabajoId { get; set; }
     public Trabajos Trabajo { get; set; } = new Trabajos();
     private bool Existe = false;
     public List<Clientes> Lista_Clientes { get; set; } = new List<Clientes>();
     public List<Tecnicos> Lista_Tecnicos { get; set; } = new List<Tecnicos>();
     public List<Prioridades> Lista_Prioridades { get; set; } = new List<Prioridades>();
+    public List<TrabajosDetalle> Lista_TrabajosDetalle { get; set; } = new List<TrabajosDetalle>();
+    public List<Articulos> Lista_Articulos { get; set; } = new List<Articulos>();
+    public int articuloSeleccionado { get; set; }
+    public TrabajosDetalle trabajosDetalle { get; set; } = new TrabajosDetalle();
 
     protected override async Task OnInitializedAsync()
     {
         Lista_Prioridades = await prioridadesServices.GetPrioridades();
         Lista_Clientes = await clientesServices.GetClientes();
+        Lista_TrabajosDetalle = await trabajosServices.ListarTrabajoDetalle(TrabajoId);
         Lista_Tecnicos = await tecnicosServices.GetTecnicos();
+        Lista_Articulos = await trabajosServices.GetArticulos();
 
-
-        if (TrabajoId.HasValue)
-        {
-            Trabajo.TrabajoId = TrabajoId.Value;
+            Trabajo.TrabajoId = TrabajoId;
             await Buscar();
-        }
+   
     }
 
     public async Task Buscar()
@@ -155,4 +222,41 @@
         var eliminado = await trabajosServices.Eliminar(Trabajo.TrabajoId);
         Nuevo();
     }
+
+    public void AgregarDetalle()
+    {
+        var seleccionArticulo = Lista_Articulos
+        .FirstOrDefault(a => a.ArticuloId == articuloSeleccionado);
+
+        if (seleccionArticulo != null && trabajosDetalle.Cantidad > 0)
+        {
+            trabajosDetalle.Precio = seleccionArticulo.Precio;
+
+            var detalleNuevo = new TrabajosDetalle
+                {
+                    ArticuloId = seleccionArticulo.ArticuloId,
+                    Cantidad = trabajosDetalle.Cantidad,
+                    Precio = seleccionArticulo.Precio
+                };
+
+            Trabajo.Monto += detalleNuevo.Cantidad * detalleNuevo.Precio;
+
+            Lista_TrabajosDetalle.Add(detalleNuevo);
+            trabajosDetalle = new TrabajosDetalle();
+            articuloSeleccionado = 0;
+        }
+    }
+
+    public void RemoverDetalle(TrabajosDetalle detalleRemover)
+    {
+        Lista_TrabajosDetalle.Remove(detalleRemover);
+
+        Trabajo.Monto -= detalleRemover.Cantidad * detalleRemover.Precio;
+
+        articuloSeleccionado = detalleRemover.ArticuloId;
+        trabajosDetalle.Cantidad = detalleRemover.Cantidad;
+        trabajosDetalle.Precio = detalleRemover.Precio;
+
+    }
+
 }
