Creando cotizaciones y cambiendo a DB factory

--- a/RegistroTecnicos/Components/Layout/NavMenu.razor
+++ b/RegistroTecnicos/Components/Layout/NavMenu.razor
@@ -36,6 +36,12 @@
                 <span class="bi bi-journal-arrow-up fs-5 h-auto" aria-hidden="true"></span> Prioridades
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Cotizaciones/Index">
+                <span class="bi bi-bar-chart-steps fs-5 h-auto" aria-hidden="true"></span> Cotizaciones
+            </NavLink>
+        </div>
     </nav>
 </div>
 
